# Assetto-Corsa-RL

./: .env  .gitignore  README.md  config.py  requirements.txt  sac.py  test.py  test_model.py
assetto_corsa/: __init__.py  assetto_corsa.py  car.py  controller.py  environment.py  telemetry_client.py  track.py
assetto_corsa/configs/: assists.ini  controls.ini  race.ini  telemetry_server.ini  video.ini
shared_memory_proxy/: CmakePresets.json  vcpkg.json
shared_memory_proxy/src/: dllmain.cpp
telemetry_server/: TelemetryData.py  __init__.py
telemetry_server/ac_app/dll/shared_memory/: CMakeLists.txt
telemetry_server/ac_app/dll/shared_memory/src/: dllmain.cpp  exports.def
telemetry_server/ac_app/telemetry_server/: README  telemetry_server.ini  telemetry_server.py
telemetry_server/ac_app/telemetry_server/stdlib/: _socket.pyd
training/: environment.py  sac.py  sac_cnn.py  sac_mlp.py  sac_ray.py  sac_vec.py
